# sentry-samples-rust

otel-distributed/: Makefile  README.md
otel-distributed/client/: index.js  package-lock.json  package.json
otel-distributed/server/: Cargo.toml
otel-distributed/server/src/: main.rs
tsan/: Cargo.toml  Makefile  README.md
tsan/src/: main.rs
