[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.3", features = ["tracing", "json"] }
sentry = { path = "../../../sentry-rust/sentry" }
sentry-opentelemetry = { path = "../../../sentry-rust/sentry-opentelemetry" }
opentelemetry = { version = "0.29.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["trace", "rt-tokio"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.30.0"
tower-http = { version = "0.6.2", features = ["trace"] } 
opentelemetry-stdout = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
